# websocket-rs

./: .gitignore  Cargo.toml  README.md
autobahn/: fuzzingclient.json  fuzzingserver.json
src/: codec.rs  error.rs  lib.rs  message.rs
src/frame/: builder.rs  mod.rs  opcode.rs
