[package]
name = "websocket-rs"
version = "0.1.5"
authors = ["Oussama Elgoumri <euvoor@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/euvoor/websocket-rs"
documentation = "https://docs.rs/websocket-rs"
repository = "https://github.com/euvoor/websocket-rs"
description = """
Tokio based websocket server/client (under active development)
"""

[dependencies]
base64 = "0.12.3"
bytes = "0.5.6"
futures = "0.3.5"
http-rs = { path = "../http" }
sha1 = "0.6.0"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tracing = "0.1.16"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.8"
